--- a/assets/style/__buttons.scss
+++ b/assets/style/__buttons.scss
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: 3%;
+    margin-top: 1%;
 
     .btn {
         text-align: center;
@@ -30,7 +30,7 @@
 
 
 
-@media only screen and (max-width: 1095px) {
+@media only screen and (min-width: 1095px) {
     #buttons {
         margin-top: 5%;
     
